# utim

./: CMakeLists.txt  manifest.json.in  tagger.apparmor
app/: CMakeLists.txt  client.cpp  client.h  main.cpp  qrcodegenerator.cpp  qrcodegenerator.h  qrcodeimageprovider.cpp  qrcodeimageprovider.h  qrcodereader.cpp  qrcodereader.h  tagger-wrapper  tagger.desktop.in
app/qml/: CMakeLists.txt  MainMenuButton.qml  tagger.qml
cmake/: Click.cmake
